fix build issues

--- a/BlazorClient/Pages/Users/Index.razor
+++ b/BlazorClient/Pages/Users/Index.razor
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using BlazorClient.Services.AccountManagement
 @using System.BLL.Models.UserManagement
+@using BlazorClient.Services.GroupManagement
 @attribute [Authorize]
 @inject IAccountService AccountService
 @inject IGroupService groupService
