To day I added new modifications to 404 page

--- a/BlazorClient/App.razor.css
+++ b/BlazorClient/App.razor.css
@@ -1,3 +1,10 @@
 ﻿.bg-image{
     width:100%
 }
+.text {
+    position: fixed;
+    top: 355px;
+    font-family: sans-serif;
+    font-size: 25px;
+    left: 1110px;
+}
