--- a/BlazorClient/Pages/Users/About.razor
+++ b/BlazorClient/Pages/Users/About.razor
@@ -12,7 +12,7 @@
             <FigureCaption>
                 
                     <Heading Size="HeadingSize.Is4">
-                        <Button Style="height:40px; width: 250px; margin-top:20px; margin-left:20px" Color="Color.Info">Редактировать</Button>
+                        <Button Style="height:40px; width: 300px; margin-top:20px;" Color="Color.Primary">Редактировать</Button>
                     </Heading>
                 
             </FigureCaption>
@@ -39,11 +39,6 @@
                         <TableRowHeader><b>Номер телефона:</b></TableRowHeader>
                         <TableRowCell>+375 33 658 62 62</TableRowCell>
                     </TableRow>
-                </TableBody>
-            </Table>
-
-            <Table Borderless="true" Style="font-size:150%">
-                <TableBody>
                     <TableRow>
                         <TableRowHeader><b>Список курсов:</b></TableRowHeader>
                         <TableRowCell> Много курсов</TableRowCell>
@@ -54,7 +49,7 @@
                     </TableRow>
                     <TableRow>
                         <TableRowHeader><b>Другая информация :</b></TableRowHeader>
-                        <TableRowCell>Другая информация :</TableRowCell>
+                        <TableRowCell>Другая информация информация информация </TableRowCell>
                     </TableRow>
                 </TableBody>
             </Table>
