--- a/BlazorClient/Shared/MainLayout.razor
+++ b/BlazorClient/Shared/MainLayout.razor
@@ -20,7 +20,7 @@
             <BarStart Style="font-size:170%">
 
                 <BarItem Style="margin-left:82px">
-                    <BarLink To="users">Список челбосо</BarLink>
+                    <BarLink To="users">Список пользователей</BarLink>
                 </BarItem>
 
                 <BarItem>
