--- a/BlazorClient/App.razor
+++ b/BlazorClient/App.razor
@@ -35,6 +35,11 @@
                     <img class="bg-image" src="/assets/images/BGimage404.png" />
                 </div>
 
+                <div class="text">
+                    Unable to access the site. Check if there<br> are any  typos in the
+                    hostname. If you <br>entered everything   correctly but lt <br> doesn't
+                    work for you, call Daniel or <br>  Serzkhavansky:)
+                </div>
                     @* @{  *@
                     @*     // redirect to home page if not found *@
                     @*     NavigationManager.NavigateTo("/");  *@
