--- a/BlazorClient/Pages/Groups/Add.razor.css
+++ b/BlazorClient/Pages/Groups/Add.razor.css
@@ -1,6 +1,9 @@
 ﻿body {
 }
-.Add-form {
-    padding-left: 200px;
-    padding-right: 200px;
+.form {
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 20px;
+    margin: 20px;
+    border-radius: 3px;
+    background-color: white;
 }
