--- a/BlazorClient/Pages/Groups/Index.razor.css
+++ b/BlazorClient/Pages/Groups/Index.razor.css
@@ -8,3 +8,46 @@
     background-color: white;
     width: 1645px;
 }
+
+.add-group {
+    position: fixed;
+    right: 15px;
+    bottom: 15px;
+    width: 50px;
+    height: 50px;
+    border-block-color: transparent;
+    border-radius: 50%;
+    background-color: #5ec246;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+.add-group:hover,
+.add-group:focus {
+    filter: brightness(1.1);
+    outline: none;
+}
+
+.add-group::before,
+.add-group::after {
+    content: " ";
+    position: absolute;
+    display: block;
+    background-color: #fff;
+}
+
+.add-group::before {
+    width: 4px;
+    margin-left: -3px;
+    left: 51%;
+    top: 15px;
+    bottom: 15px;
+    z-index: 9;
+}
+
+.add-group::after {
+    height: 4px;
+    margin-top: -3px;
+    top: 52%;
+    left: 15px;
+    right: 15px;
+    z-index: 9;
+}
