--- a/BlazorClient/Pages/Users/About.razor.css
+++ b/BlazorClient/Pages/Users/About.razor.css
@@ -25,10 +25,9 @@
     display:table;
 }
 .Name {
-    margin-left: 140px;
+    margin-left: 40px;
 }
 .tables {
     margin-top:60px;
-    display: flex;
-    justify-content:space-around;
+    padding:20px;
 }
