--- a/BlazorClient/Pages/Users/About.razor.css
+++ b/BlazorClient/Pages/Users/About.razor.css
@@ -1,34 +1,44 @@
 ﻿body {
 }
+
 .main-info {
     display: flex;
     margin: 20px;
     position: relative;
-    width: 1645px;
+    width: 100%;
 }
-.info {
-    padding: 30px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    padding: 10px;
-    border-radius: 3px;
-    background-color: white;
-    width: 1855px;
-}
-.photo-card {
-    padding: 30px;
-    margin-right: 20px;
 
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    padding: 10px;
+.info {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 50px;
     border-radius: 3px;
     background-color: white;
-    display:table;
+    width: 100%;
 }
-.Name {
-    margin-left: 140px;
+
+.photo-card {
+    margin-right: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    background-color: white;
+    display: table;
 }
+
+.edit-button {
+    background-color: black;
+    height: 40px;
+    width: 250px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
 .tables {
-    margin-top:60px;
+    margin: 30px 0;
     display: flex;
-    justify-content:space-around;
+    justify-content: start;
+}
+
+.my-table {
+    font-size: 150%;
+
 }
