--- a/BlazorClient/App.razor
+++ b/BlazorClient/App.razor
@@ -1,52 +1,17 @@
-@* <CascadingAuthenticationState> *@
-@*     <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true"> *@
-@*         <Found Context="routeData"> *@
-@*             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"> *@
-@*                 <NotAuthorized> *@
-@*                     @if (!context.User.Identity.IsAuthenticated) *@
-@*                     { *@
-@*                         <RedirectToLogin/> *@
-@*                     } *@
-@*                     else *@
-@*                     { *@
-@*                         <p>You are not authorized to access this resource.</p> *@
-@*                     } *@
-@*                 </NotAuthorized> *@
-@*             </AuthorizeRouteView> *@
-@*         </Found> *@
-@*         <NotFound> *@
-@*             <LayoutView Layout="@typeof(MainLayout)"> *@
-@*                 <p>Sorry, there's nothing at this address.</p> *@
-@*             </LayoutView> *@
-@*         </NotFound> *@
-@*     </Router> *@
-@* </CascadingAuthenticationState> *@
-
 @inject NavigationManager NavigationManager
 
-    
-        <Router AppAssembly="@typeof(Program).Assembly">
-            <Found Context="routeData">
-                <AppRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-            </Found>
-            <NotFound>
-                <div class="bg">
-
-                    <img class="bg-image" src="/assets/images/BGimage404.png" />
-                </div>
-
-                <div class="text">
-                    Unable to access the site. Check if there<br> are any  typos in the
-                    hostname. If you <br>entered everything   correctly but lt <br> doesn't
-                    work for you, call Daniel or <br>  Serzkhavansky:)
-                </div>
-                    @* @{  *@
-                    @*     // redirect to home page if not found *@
-                    @*     NavigationManager.NavigateTo("/");  *@
-                    @* } *@
-            </NotFound>
-        </Router>
-
-    
-    @* *@
-    @* <AntContainer /> *@
+<Router AppAssembly="@typeof(Program).Assembly">
+    <Found Context="routeData">
+        <AppRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
+    </Found>
+    <NotFound>
+        <div class="bg">
+            <img class="bg-image" src="/assets/images/BGimage404.png"/>
+        </div>
+        <div class="text">
+            Unable to access the site. Check if there<br> are any typos in the
+            hostname. If you <br>entered everything correctly but lt <br> doesn't
+            work for you, call <Link To="https://t.me/seltenes">Daniel</Link>
+        </div>
+    </NotFound>
+</Router>
