--- a/BlazorClient/App.razor.css
+++ b/BlazorClient/App.razor.css
@@ -3,8 +3,8 @@
 }
 .text {
     position: fixed;
-    top: 355px;
-    font-family: sans-serif;
-    font-size: 25px;
-    left: 1110px;
+    bottom: 40vh;
+    font-size: 190%;
+    right: 18vw;
+    width: 23vw;
 }
