--- a/BlazorClient/Shared/MainLayout.razor
+++ b/BlazorClient/Shared/MainLayout.razor
@@ -1,106 +1,102 @@
 @using BlazorClient.Services.AccountManagement
+@using System.BLL.Models.ClubManagement
+@using BlazorClient.Services.ClubManagement
+@using BlazorClient.Services.UserManagement
 @inherits LayoutComponentBase
-@inject IAccountService AccountService
-@inject NavigationManager NavigationManager
+@inject IAccountService _accountService
+@inject IUserService _userService
+@inject NavigationManager _navigationManager
+@inject IClubService _clubService
 
 @if (LoggedIn)
 {
+    <div>
+        <Bar Breakpoint="Breakpoint.Desktop"
+             Background="Background.White"
+             ThemeContrast="ThemeContrast.Light"
+             Class="header-bar">
 
-    <!--nav-->
-    <Bar Breakpoint="Breakpoint.Desktop"
-         Background="Background.White"
-         ThemeContrast="ThemeContrast.Light">
+            <BarBrand Style="border:none;">
+                <BarLink To=".">
+                    <div class="home">
+                        It_Club
+                    </div>
+                </BarLink>
+            </BarBrand>
+            <BarMenu >
+                <BarStart Style="font-size:170%">
 
-        <BarBrand Style="border:none;">
-            <div class="home">
-                <b>It_Club</b>
-            </div>
-        </BarBrand>
-        <BarMenu >
-            <BarStart Style="font-size:170%">
+                    <BarItem Style="margin-left:82px">
+                        <BarLink To="users">Список пользователей</BarLink>
+                    </BarItem>
 
-                <BarItem Style="margin-left:82px">
-                    <BarLink To="users">Список пользователей</BarLink>
-                </BarItem>
+                    <BarItem>
+                        <BarLink To="groups">Cписок групп</BarLink>
+                    </BarItem>
 
-                <BarItem>
-                    <BarLink To="groups">Cписок групп</BarLink>
-                </BarItem>
+                    <BarItem>
+                        <BarLink To="payments">Оплата</BarLink>
+                    </BarItem>
 
-                <BarItem>
-                    <BarLink To="#">Оплата</BarLink>
-                </BarItem>
+                    <BarItem>
+                        <BarLink To="account/logout">Выход</BarLink>
+                    </BarItem>
 
-                <BarItem>
-                    <BarLink To="#">Выход</BarLink>
-                </BarItem>
+                    <BarItem Style="float:right">
 
-                <BarItem Style="float:right">
+                        <BarLink To="/users/{id:int}">
+                            <img class="user-image" src="/assets/images/User (1).svg"/>
+                            @($"{_accountService.User.Name} {_accountService.User.Surname} ")
+                        </BarLink>
 
-                    <BarLink To="/users/{id:int}">
-                        <img class="user-image" src="/assets/images/User (1).svg" />
-                        @($"{AccountService.User.Name} {AccountService.User.Surname} ")
-                    </BarLink>
+                    </BarItem>
+                </BarStart>
+            </BarMenu>
+        </Bar>
+    </div>
+    <div class="sider">
+        <!--Sidebar-->
+        <Sidebar @ref="_sidebar">
+            <SidebarContent>
+                <SidebarNavigation>
+                    @foreach (var club in _clubs)
+                    {
+                        <SidebarItem>
+                            <SidebarLink To="" Title="@club.Title">
+                                <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight"/>Дворец
+                            </SidebarLink>
+                        </SidebarItem>
+                    }
+                </SidebarNavigation>
+            </SidebarContent>
+        </Sidebar>
+        <AlertCustom/>
+        @Body
 
-                </BarItem>
-            </BarStart>
-        </BarMenu>
-    </Bar>
-    <!--</nav>-->
-
-<div class="sider">
+    </div>
     <!--Sidebar-->
-    <Sidebar @ref="sidebar">
-        <SidebarContent>
-            <SidebarBrand>
-                <a href="">Список групп</a>
-            </SidebarBrand>
-            <SidebarNavigation>
-                <SidebarItem>
-                    <SidebarLink To="" Title="Дворец">
-                        <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight" />Дворец
-                    </SidebarLink>
-                </SidebarItem>
-                <SidebarItem>
-                    <SidebarLink To="" Title="Серебронск">
-                        <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight" />Серебронск
-                    </SidebarLink>
-                </SidebarItem>
-                <SidebarItem>
-                    <SidebarLink To="" Title="Двойное чикаго">
-                        <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight" />Двойное чикаго
-                    </SidebarLink>
-                </SidebarItem>
-                <SidebarItem>
-                    <SidebarLink To="" Title="Серебронск">
-                        <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight" />Серебронск
-                    </SidebarLink>
-                </SidebarItem>
-
-            </SidebarNavigation>
-        </SidebarContent>
-    </Sidebar>
-
-    <AlertCustom/>
-
-    @Body
-
-</div>
-    <!--Sidebar-->
-
 }
 
 @code {
-    private bool LoggedIn => AccountService.User != null;
+    private bool LoggedIn => _accountService.User != null;
 
+    private IEnumerable<ClubModel> _clubs = new List<ClubModel>();
+    private IEnumerable<ClubModel> _userClubs = new List<ClubModel>();
 
-    Sidebar sidebar;
+    Sidebar _sidebar;
     SidebarSubItem mailSidebarSubItems;
     SidebarSubItem appsSidebarSubItems;
 
+    protected override async Task OnInitializedAsync()
+    {
+        _clubs = await _clubService.GetAllAsync();
+        _userClubs = await _clubService.GetClubsByUser(_accountService.User.Id);
+        var clubsRoles = (await _clubService.GetAllAsync()).Select(cl => cl.Title).Intersect(await _userService.GetRolesAsync(_accountService.User.Id));
+    }
+
     void ToggleSidebar()
     {
-        sidebar.Toggle();
+        _sidebar.Toggle();
     }
 
 }
